refactor: remove GZIP compression from TreeSitterStateIO